# NodeBearingVectorSystemCore

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE-Commerical.txt  LICENSE.txt  README.md  main.cpp  vcpkg.json
module/Operators/: AttributesManager.cpp  AttributesManager.h  CoordinateConverter.cpp  CoordinateConverter.h  YamlConverter.cpp  YamlConverter.h
module/Segments/: LinerSegment.cpp  LinerSegment.h
module/Server/: SocketServer.cpp  SocketServer.h
module/Vectors/: BearingVector.cpp  BearingVector.h  NodeVector.cpp  NodeVector.h  Vector3.h
modules/entities/: BearingVector.h  IndexBuffer.h  NodeVector.h  NormalizedFixedPoint.h  Vector3.h  vector3.h
modules/operators/: CoordinateConverter.cpp  CoordinateConverter.h  GlobalLocationConverter.h  JsonConverter.h  Vertex.cpp  Vertex.h  YamlConverter.h  coordinateConverter.h
modules/segments/: LinearSegment.cpp  LinearSegment.h  LinerSegment.cpp  LinerSegment.h  SurfaceSegment.cpp  SurfaceSegment.h  linerSegment.h
modules/vectors/: BearingVector.cpp  BearingVector.h  NodeVector.cpp  NodeVector.h  bearingVector.h  nodeVector.h
server/: init.txt
server/api/: LinearSegmentAPI.h
server/dto/: LinerSegmentDTO.h  NodeVectorDTO.h
server/managers/: EventManager.cpp  EventManager.h  RoutesManager.h  ServerManager.cpp  ServerManager.h  SocketManager.cpp  SocketManager.h  eventManager.h  serverManager.h  socketManager.h
services/interfaces/: DrawWindow.h  LoadInterface.h  Menu.cpp  Menu.h  menu.h  simulator.h
services/managers/: ObjectManager.cpp  ObjectManager.h  SceneManager.cpp  SceneManager.h  SegmentManager.h  objectManager.h  sceneManager.h
services/server/: Server.h  ServerManager.h
services/server/dto/: LinearSegmentDTO.h  LinearSegmentDTO.json
services/server/managers/: ServerManager.h  SocketManager.h
src/modules/entities/: BearingVector.h  NodeVector.h  Vector3.cpp  Vector3.h
src/modules/segments/: IndexBuffer.h  LinearSegment.h  SurfaceSegment.h
src/server/: ServerManager.h
src/server/dto/: BearingVectorDTO.h  LinearSegmentDTO.h  NodeVectorDTO.h  ObjectManagerDTO.h  SceneManagerDTO.h  SurfaceSegmentDTO.h
src/server/managers/: SocketManager.h
src/services/managers/: ObjectManager.h
tests/: CMakeLists.txt  ObjectManagerTests.cc  test.cc  test.py
tests/modules/entities/: BearingVectorTest.cc  NodeVectorTest.cc  Vector3Test.cc
tests/modules/operators/: CoordinateConverterTest.cc  Vertex.cc
tests/modules/segments/: LinearSegmentTest.cc  LinerSegmentTest.cc  SurfaceSegmentTest.cc
tests/modules/vectors/: BearingVectorTest.cc  NodeVectorTest.cc
tests/server/managers/: SocketManagerTest.cc
tests/services/managers/: ObjectManagerTest.cc  SceneManagerTest.cc
